# ubi-cli

./: Cargo.toml  README.md
src/: client.rs  commands.rs  lib.rs  main.rs  resources.rs
src/commands/: auth.rs  list.rs
src/commands/auth/: login.rs  status.rs
src/commands/list/: games.rs
src/resources/: credentials.rs  game.rs  user.rs
