[package]
name = "ubi-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.34", features = ["serde"] }
clap = { version = "4.5.1", features = ["derive"] }
dirs = "5.0.1"
serde = "1.0.197"
serde_json = "1.0.114"
tao = "0.26.0"
tokio = { version = "1.36.0", features = ["full"] }
wry = "0.37.0"
